:memo: update readme

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
     }
 }
 
+apply plugin: 'application'
+
 group 'io.innofang'
 version '1.0-SNAPSHOT'
 
@@ -19,6 +21,15 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "ClientKt"
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 dependencies {
